k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: katmanlimimari
  labels:
    name: katmanlimimari
    environment: production
